--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,56 @@
 {
-  "name": "طعم الشام - إدارة المطبخ",
+  "name": "طعم الشام",
   "short_name": "طعم الشام",
-  "start_url": "./admin.html",
-  "display": "standalone",
-  "background_color": "#f1f5f9",
-  "theme_color": "#dc2626",
+  "description": "تطبيق طلبات مطعم طعم الشام - إدارة وعملاء",
   "lang": "ar",
   "dir": "rtl",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "portrait",
+  "theme_color": "#b91c1c",
+  "background_color": "#ffffff",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "categories": ["food", "business", "shopping"],
+  "prefer_related_applications": false
 }
